--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       { name: "Chix", message: "happy birthday my cherbear, my gurl, my literal day one! wishing you the BEST life has to offer. i love you so muchhhh. enjoy your day...and your new age, mh" },
       { name: "Ude", message: "happy birthday cherishhhh, hope you enjoy your day today, i wish you a sweet 17 and i pray the lord will add many more years" },
       { name: "Valerie 💓", message: "happy birthday Cherish!!!! wishing you the longest life and prosperity! even though we don't talk a lot, you seem like a really funny person and interesting to be around! hope you have the best day ever x" },
-      { name: "Person 11", message: "Celebrate yourself today 🎉" },
+      { name: "Harmony", message: "happy birthday cher!!! wish you the best life could possibly offer, have an amazing day! love you" },
       { name: "Person 12", message: "All the best for this year 💖" },
       { name: "Person 13", message: "You’re amazing! 🌸" },
       { name: "Person 14", message: "Much love today 💕" },
