--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 </head>
 <body>
   <div class="card">
-    <h1>Happy Birthday 🎂💖</h1>
-    <h2>So many people wanted to wish you the best</h2>
+    <h1>Happy Birthday Cherish 🎂💖</h1>
+    <h2>From the IFY set of 25/26, We wish you the best!</h2>
 
     <div class="wishes" id="wishes"></div>
 
@@ -115,9 +115,9 @@
       { name: "Ude", message: "happy birthday cherishhhh, hope you enjoy your day today, i wish you a sweet 17 and i pray the lord will add many more years" },
       { name: "Valerie 💓", message: "happy birthday Cherish!!!! wishing you the longest life and prosperity! even though we don't talk a lot, you seem like a really funny person and interesting to be around! hope you have the best day ever x" },
       { name: "Harmony", message: "happy birthday cher!!! wish you the best life could possibly offer, have an amazing day! love you" },
-      { name: "Person 12", message: "All the best for this year 💖" },
-      { name: "Person 13", message: "You’re amazing! 🌸" },
-      { name: "Person 14", message: "Much love today 💕" },
+      { name: "Mary", message: "Happy birthday, Cherish!! I hope you have an amazing day, and I pray that God grants all your desires.💘💘" },
+      { name: "Michael", message: "Happy Birthday, Cherish, wishing you long life and prosperity" },
+      { name: "Nnaeto", message: "happy birthday cherish, you are a very funny, nice, wholehearted and wonderful person and i hope you see many more birthdays in your life and that you get all that you desire, you deserve it. enjoy your day" },
       { name: "Person 15", message: "Happy, happy birthday! 🥳" },
       { name: "Person 16", message: "Wishing smiles all day 😄" },
       { name: "Person 17", message: "Joyful moments ahead 🎂" },
