--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
       { name: "Harmony", message: "happy birthday cher!!! wish you the best life could possibly offer, have an amazing day! love you" },
       { name: "Mary", message: "Happy birthday, Cherish!! I hope you have an amazing day, and I pray that God grants all your desires.💘💘" },
       { name: "Michael", message: "Happy Birthday, Cherish, wishing you long life and prosperity" },
-      { name: "Nnaeto", message: "happy birthday cherish, you are a very funny, nice, wholehearted and wonderful person and i hope you see many more birthdays in your life and that you get all that you desire, you deserve it. enjoy your day" },
-      { name: "Person 15", message: "Happy, happy birthday! 🥳" },
-      { name: "Person 16", message: "Wishing smiles all day 😄" },
+      { name: "Naeto", message: "happy birthday cherish, you are a very funny, nice, wholehearted and wonderful person and i hope you see many more birthdays in your life and that you get all that you desire, you deserve it. enjoy your day" },
+      { name: "Tonjie", message: "It doesn't even begin to make sense how you're just turning 10, nevertheless I love you so much, for all the time we've spent together since we were both kids youve always found a way to always be there for me and I really much appreciate you for that. Here's to you another year of MADNESS, being my ski and for us being there for each other even in war! Enjoy your day cherish ❤️ and don't let any prick spoil it for you. one love" },
+      { name: "Steve", message: "Happy Birthday, Enjoy your day" },
       { name: "Person 17", message: "Joyful moments ahead 🎂" },
       { name: "Person 18", message: "Have a blast today! 🌟" },
       { name: "Person 19", message: "You rock! 🎸" },
