--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
       { name: "Naeto", message: "happy birthday cherish, you are a very funny, nice, wholehearted and wonderful person and i hope you see many more birthdays in your life and that you get all that you desire, you deserve it. enjoy your day" },
       { name: "Tonjie", message: "It doesn't even begin to make sense how you're just turning 10, nevertheless I love you so much, for all the time we've spent together since we were both kids youve always found a way to always be there for me and I really much appreciate you for that. Here's to you another year of MADNESS, being my ski and for us being there for each other even in war! Enjoy your day cherish ❤️ and don't let any prick spoil it for you. one love" },
       { name: "Steve", message: "Happy Birthday, Enjoy your day" },
-      { name: "Person 17", message: "Joyful moments ahead 🎂" },
-      { name: "Person 18", message: "Have a blast today! 🌟" },
+      { name: "OKOJIE", message: "hbd sherrish, wishing you the best life has to offer.youll never get my mifi" },
+      { name: "Uchpuppy", message: "Happy Birthday Cherish, you are the sugar in my tea, the butter in my bread and the soup for my garry. May God bless you with long life." },
       { name: "Person 19", message: "You rock! 🎸" },
       { name: "Person 20", message: "Sweet celebrations 💖" },
       { name: "Person 21", message: "Cheers to your special day! 🥂" },
