--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       { name: "OKOJIE", message: "hbd sherrish, wishing you the best life has to offer.youll never get my mifi" },
       { name: "Uchpuppy", message: "Happy Birthday Cherish, you are the sugar in my tea, the butter in my bread and the soup for my garry. May God bless you with long life." },
       { name: "Mannie", message: "Happy birthday cher ❤️! i pray you have an amazing day and genuinely pray you enjoy it to the fullest. 🫶 - mannie 🎸" },
-      { name: "Person 20", message: "Sweet celebrations 💖" },
+      { name: "Priye", message: "Happy birthday , God bless you" },
       { name: "Person 21", message: "Cheers to your special day! 🥂" },
       { name: "Person 22", message: "Happiness forever 🌸" },
       { name: "Person 23", message: "Birthday love 💕" },
