--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       { name: "Uchpuppy", message: "Happy Birthday Cherish, you are the sugar in my tea, the butter in my bread and the soup for my garry. May God bless you with long life." },
       { name: "Mannie", message: "Happy birthday cher ❤️! i pray you have an amazing day and genuinely pray you enjoy it to the fullest. 🫶 - mannie 🎸" },
       { name: "Priye", message: "Happy birthday , God bless you" },
-      { name: "Person 21", message: "Cheers to your special day! 🥂" },
+      { name: "Ruky", message: "happy birthday cherish, wish u many more years, hope u have a great dayh" },
       { name: "Person 22", message: "Happiness forever 🌸" },
       { name: "Person 23", message: "Birthday love 💕" },
       { name: "Person 24", message: "Stay amazing! ✨" },
