--- a/index.html
+++ b/index.html
@@ -125,35 +125,12 @@
       { name: "Mannie", message: "Happy birthday cher ❤️! i pray you have an amazing day and genuinely pray you enjoy it to the fullest. 🫶 - mannie 🎸" },
       { name: "Priye", message: "Happy birthday , God bless you" },
       { name: "Ruky", message: "happy birthday cherish, wish u many more years, hope u have a great dayh" },
-      { name: "Person 22", message: "Happiness forever 🌸" },
-      { name: "Person 23", message: "Birthday love 💕" },
-      { name: "Person 24", message: "Stay amazing! ✨" },
+      { name: "Sheriff", message: "Happy birthday sherishh..wishing you long life nd prosperity...Have a good day" },
+      { name: "bidemzzzz", message: "happy birthday mll. I will shoow you that i am a lion who doesnt hangout with a goat💓" },
+      { name: "Boma¬‿¬", message: "Happy Birthday Cherish!!, wishing you many more years, long life and all your heart desires. Enjoy your day❤️" },
       { name: "Person 25", message: "Much joy today 🎉" },
-      { name: "Person 26", message: "Sending warm wishes 💖" },
-      { name: "Person 27", message: "Smile always 😄" },
-      { name: "Person 28", message: "You deserve the best 🌟" },
-      { name: "Person 29", message: "Have fun today 🥳" },
-      { name: "Person 30", message: "Much love 💕" },
-      { name: "Person 31", message: "You’re awesome! 🎂" },
-      { name: "Person 32", message: "Birthday cheers 🥂" },
-      { name: "Person 33", message: "Hugs and happiness 🤗" },
-      { name: "Person 34", message: "Celebrate big! 🎉" },
-      { name: "Person 35", message: "Joy and love 💖" },
-      { name: "Person 36", message: "Best wishes 🌸" },
-      { name: "Person 37", message: "Have a magical day 🪄" },
-      { name: "Person 38", message: "You’re the best! 💕" },
-      { name: "Person 39", message: "Party time 🎉" },
-      { name: "Person 40", message: "Happiness all around 🌟" },
-      { name: "Person 41", message: "Keep smiling 😄" },
-      { name: "Person 42", message: "Love and joy 💖" },
-      { name: "Person 43", message: "Have a wonderful birthday 🎂" },
-      { name: "Person 44", message: "Sending birthday hugs 🤗" },
-      { name: "Person 45", message: "May your day be sweet 🌸" },
-      { name: "Person 46", message: "Lots of love 💕" },
-      { name: "Person 47", message: "You deserve happiness 🎉" },
-      { name: "Person 48", message: "Shine bright ✨" },
-      { name: "Person 49", message: "Have fun 🥳" },
-      { name: "Person 50", message: "Best birthday wishes 💖" }
+
+      
     ];
 
     const wishesContainer = document.getElementById('wishes');
