--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
       { name: "Sheriff", message: "Happy birthday sherishh..wishing you long life nd prosperity...Have a good day" },
       { name: "bidemzzzz", message: "happy birthday mll. I will shoow you that i am a lion who doesnt hangout with a goat💓" },
       { name: "Boma¬‿¬", message: "Happy Birthday Cherish!!, wishing you many more years, long life and all your heart desires. Enjoy your day❤️" },
-      { name: "Person 25", message: "Much joy today 🎉" },
-
+      { name: "Kamsi", message: "Happy Birthday, Cherish! You have always been kind and cheerful, on your special day I wish you the best." },
+      { name: "Dassah", message: "Happy Birthday Cherish, Thank you for being such an amazing person. I love you so much, and I wish you all the best. I pray you have an amazing year and that all your heart desires are granted. - Love ." },
       
     ];
 
