--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
       { name: "Boma¬‿¬", message: "Happy Birthday Cherish!!, wishing you many more years, long life and all your heart desires. Enjoy your day❤️" },
       { name: "Kamsi", message: "Happy Birthday, Cherish! You have always been kind and cheerful, on your special day I wish you the best." },
       { name: "Dassah", message: "Happy Birthday Cherish, Thank you for being such an amazing person. I love you so much, and I wish you all the best. I pray you have an amazing year and that all your heart desires are granted. - Love ." },
+      { name:"Declan", message: "Happy Birthday Cherish, Hope your day is amazing and I pray you succeed in all your life endeavours" },
+      { name:"Nengi", message: "Happy Birthday Cherish!!! I wish you every good thing that life has to offer and I hope you succeed in everything you do! You're so amazing!-Nengi" },
+      { name:"Greg", message: "Happy Birthday♡ Wishing yoy more life and prosperity." },
       { name: "The Rest of IFY 2025/26", message: "Happy Birthday!!❤️" },
       
     ];
