--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
     // ✨ WRITE THE WISHES HERE, UP TO 50 ✨
 
     const wishes = [
+      
+      { name: "MIKEL", message: "Happy birthday cherish, You are a very kind-hearted person and I wish u the best in life plus many more years , have a nice day" },
       { name: "Franklin", message: "happy birthday cherish. WULLNP" },
       { name: "Uche", message: "Haappy birthday cheriish" },
       { name: "Bethel", message: "happy birthday mama cherr 🥺❤️ i deey come worry you after my exam " },
